# hw06-optimization

./: .gitignore  README.md  pyproject.toml
.github/workflows/: classroom.yml
hw06/: REPORT.md  accelerated.py  optimized.py
src/: slow_code.py
tests/: conftest.py  test_optimization.py
