[project]
name = "hw06-optimization"
version = "0.1.0"
description = "ДЗ 6 — Оптимизация кода"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-timeout>=2.0", "ruff>=0.8", "mypy>=1.13", "pyinstrument>=5.0", "numba>=0.60"]
