[project]
name = "hw06-optimization"
version = "0.1.0"
description = "ДЗ 6 — Оптимизация кода"
requires-python = ">=3.12"
dependencies = ["numpy>=1.26"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/slow_code.py" = ["N806"]

[tool.hatch.build.targets.wheel]
packages = ["hw06", "src"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-timeout>=2.0", "ruff>=0.8", "mypy>=1.13", "pyinstrument>=5.0", "numba>=0.60"]
